--- a/AdminCoreTest/AdminPoC/Views/Admin/Index.cshtml
+++ b/AdminCoreTest/AdminPoC/Views/Admin/Index.cshtml
@@ -22,7 +22,9 @@
             {
                 columns
                     .Add(model => column.Func(model))
-                    .Titled(column.Name);
+                    .Titled(column.Name)
+                    .Named(column.Name)
+                    .Sortable(true);
             }
         })
         .Using(GridFilterMode.Header)
