Added custom actions

--- a/AdminCoreTest/AdminPoC/Views/Admin/Index.cshtml
+++ b/AdminCoreTest/AdminPoC/Views/Admin/Index.cshtml
@@ -35,7 +35,7 @@
                 columns.Add(model =>
                     Html.ActionLink(
                         action.Name,
-                        "Delete",
+                        action.Action,
                         ViewContext.RouteData.Values["controller"].ToString(),
                         new
                         {
