--- a/AdminCoreTest/AdminPoC/Views/Admin/Index.cshtml
+++ b/AdminCoreTest/AdminPoC/Views/Admin/Index.cshtml
@@ -11,10 +11,19 @@
 <head>
     <title>title</title>
     <link href="/css/mvc-grid.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
-@Html.ActionLink("Create", "Create")
+@Html.ActionLink(
+    "Create",
+    "Create",
+    new { },
+    new
+    {
+        @class = "btn btn-dark"
+    })
 <div>
     @(Html
         .Grid(Model.Entities)
